--- a/front/css/global.css
+++ b/front/css/global.css
@@ -146,8 +146,110 @@ a:hover:after {
   transition: 1s ease-in-out;
   visibility: visible;
 }
+.imgen{
+  display:flex;
+  justify-content: center;
+}
+.imgen img{
+  border-radius: 1000px;
+  object-fit: cover;
+  width: 365px;
+  height: 365px;
+}
 
+.container-skill {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  grid-gap: 1rem;
+  padding: 1rem 80px;
+  font-size: 1.2rem;
+  background: var(--primary);
+  border-radius: 10px;
+}
+.skill-box {
+  padding: 1rem;
+  color: #1c1b1b;
+  cursor: pointer;
+}
+.skill-box:hover > .skill-title:after,
+.skill-box:hover > .skill-title:before {
+  width: 60px;
+}
+.skill-box:hover .img {
+  transform: translateY(-10px);
+}
+.skill-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0.5rem;
+  margin-bottom: 0.5;
+  position: relative;
+}
 
+.skill-title:after {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  right: 50%;
+
+  height: 4px;
+  border-radius: 2px 0 0 2px;
+  background-color: #ccc;
+  transition: all 0.5s ease-in-out;
+}
+.skill-title:before {
+  content: "";
+
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+
+  height: 4px;
+  border-radius: 0 2px 2px 0;
+  background-color: #ccc;
+  transition: all 0.5s ease-in-out;
+}
+.img {
+  width: 90px;
+  height: 90px;
+  position: relative;
+  border-radius: 45px;
+  border: 2px solid rgba(35, 41, 48, 0.815);
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s ease-in-out;
+}
+.img:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 50%;
+  height: 90px;
+  background-color: rgba(58, 53, 53, 0.45);
+  border-radius: 45px 0 0 45px;
+}
+
+.img img {
+  object-fit: contain;
+  width: 75px;
+  height: 75px;
+}
+.contacto{
+  font-size: x-large;
+}
+.contacto a{
+  color: var(--primary);
+  font-size: 30px;
+}
+.contacto a:hover{
+  color: black;
+}
 footer {
   display: flex;
   padding: 10px 0;
