--- a/front/css/global.css
+++ b/front/css/global.css
@@ -261,3 +261,15 @@ footer {
   justify-content: center;
   background-color: rgba(38, 76, 124, 0.815);
 }
+@media screen and (max-width: 990px) {
+  #board {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 2rem 50px;
+  }
+
+}
+@media screen and (max-width: 650px) {
+  #board {
+    grid-template-columns: 1fr;
+  }
+}
