--- a/front/css/historia.css
+++ b/front/css/historia.css
@@ -26,9 +26,14 @@
     flex-direction: column;
     justify-self: flex-end;
     margin: 30px;
+    
+    align-items: center;
+    justify-content: center;
 }
 .feature .text{
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
     justify-self: flex-end;
     margin: 30px;
